# Depth_Histogram

./: CMakeLists.txt  README.md  main.cpp
img/: person.pgm
